# raspberry-pi-finance-tracker

./: .gitignore  LICENSE  README.md
.github/workflows/: finances-website-deploy.yml
data/: db-connection-test.sh  migration.py  pyproject.toml  table-creation.yaml
data/data_backup/: backup-postgres-weekly.sh  check-backup-status.sh  restore-postgres-backup.sh
finances-website/finances-api/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
finances-website/finances-api/migrations/: migrations.py
finances-website/finances-api/models/: money_transfers.py  transactions.py
finances-website/finances-api/reference_data/: budget.json  categories.json  income.json  money_transfers.json  net_worth.json  rent.json
finances-website/finances-api/routers/: budget.py  categories.py  income.py  money_schedule.py  money_transfers.py  net_worth.py  rent.py  retirement.py  spending.py  transactions.py
finances-website/finances-api/scripts/: db.py  transaction_parser.py
finances-website/finances-api/transaction_data/: amex_blue.csv  amex_delta.csv  capone_venture.csv  capone_venture_x.csv  citi_custom.TXT  citi_custom.csv  citi_double.TXT  citi_double.csv  discover.csv
finances-website/finances-ui/: Dockerfile  index.html  nginx.conf  package.json  vite.config.mjs
k8s/finances_website/: app-config.yaml  finances-api-deployment.yaml  finances-ui-deployment.yaml  postgres_db-credentials.yaml  registry-deployment.yaml  registry-pv.yaml
k8s/homeassistant/: homeassistant-config.yaml  homeassistant.yaml
nginx/: nginx.conf
(+34 files in other folders)
