[tool.poetry]
name = "data"
version = "0.1.0"
description = "scripts controlling data"
authors = ["shane-lockhoof <shane.lockhoof@pathos.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
