[tool.poetry]
name = "finance-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.3"
python-magic = "^0.4.27"
dotenv = "^0.9.9"
fastapi = "^0.115.12"
psycopg2 = "^2.9.10"
pandas = "^2.2.3"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
